--- a/01--edi/02--memory.ipynb
+++ b/01--edi/02--memory.ipynb
@@ -10,36 +10,42 @@
      "output_type": "stream",
      "text": [
       "Collecting ipython-memory-usage\n",
-      "  Downloading https://files.pythonhosted.org/packages/60/e5/6e437102cf49c3843c8f192c7c7b99184e5946930bb9ab0e23799e802586/ipython_memory_usage-1.2.tar.gz\n",
-      "Requirement already satisfied: IPython>=2.1 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from ipython-memory-usage) (7.9.0)\n",
-      "Collecting memory_profiler (from ipython-memory-usage)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9f/fe/1fca7273dd111108f204a686b12a12b6422d405fe4614087aa7d5a66ea87/memory_profiler-0.55.0.tar.gz (40kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 40kB 470kB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: pexpect; sys_platform != \"win32\" in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (4.7.0)\n",
-      "Requirement already satisfied: appnope; sys_platform == \"darwin\" in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (0.1.0)\n",
-      "Requirement already satisfied: prompt-toolkit<2.1.0,>=2.0.0 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (2.0.10)\n",
-      "Requirement already satisfied: setuptools>=18.5 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (40.8.0)\n",
-      "Requirement already satisfied: decorator in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (4.4.1)\n",
-      "Requirement already satisfied: pickleshare in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (0.7.5)\n",
-      "Requirement already satisfied: pygments in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (2.4.2)\n",
-      "Requirement already satisfied: backcall in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (0.1.0)\n",
-      "Requirement already satisfied: jedi>=0.10 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (0.15.1)\n",
-      "Requirement already satisfied: traitlets>=4.2 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from IPython>=2.1->ipython-memory-usage) (4.3.3)\n",
-      "Collecting psutil (from memory_profiler->ipython-memory-usage)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/03/9a/95c4b3d0424426e5fd94b5302ff74cea44d5d4f53466e1228ac8e73e14b4/psutil-5.6.5.tar.gz (447kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 450kB 1.8MB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: ptyprocess>=0.5 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from pexpect; sys_platform != \"win32\"->IPython>=2.1->ipython-memory-usage) (0.6.0)\n",
-      "Requirement already satisfied: six>=1.9.0 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->IPython>=2.1->ipython-memory-usage) (1.13.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->IPython>=2.1->ipython-memory-usage) (0.1.7)\n",
-      "Requirement already satisfied: parso>=0.5.0 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from jedi>=0.10->IPython>=2.1->ipython-memory-usage) (0.5.1)\n",
-      "Requirement already satisfied: ipython-genutils in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/.venv/lib/python3.7/site-packages (from traitlets>=4.2->IPython>=2.1->ipython-memory-usage) (0.2.0)\n",
+      "  Using cached ipython_memory_usage-1.2.tar.gz (10 kB)\n",
+      "Requirement already satisfied: IPython>=2.1 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from ipython-memory-usage) (7.18.1)\n",
+      "Collecting memory_profiler\n",
+      "  Downloading memory_profiler-0.57.0.tar.gz (34 kB)\n",
+      "Requirement already satisfied: jedi>=0.10 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (0.17.2)\n",
+      "Requirement already satisfied: appnope; sys_platform == \"darwin\" in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (0.1.0)\n",
+      "Requirement already satisfied: pygments in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (2.7.1)\n",
+      "Requirement already satisfied: pickleshare in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (0.7.5)\n",
+      "Requirement already satisfied: decorator in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (4.4.2)\n",
+      "Requirement already satisfied: traitlets>=4.2 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (5.0.5)\n",
+      "Requirement already satisfied: backcall in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (0.2.0)\n",
+      "Requirement already satisfied: pexpect>4.3; sys_platform != \"win32\" in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (4.8.0)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (47.1.0)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from IPython>=2.1->ipython-memory-usage) (3.0.8)\n",
+      "Collecting psutil\n",
+      "  Downloading psutil-5.7.2.tar.gz (460 kB)\n",
+      "\u001b[K     |████████████████████████████████| 460 kB 1.4 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: parso<0.8.0,>=0.7.0 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from jedi>=0.10->IPython>=2.1->ipython-memory-usage) (0.7.1)\n",
+      "Requirement already satisfied: ipython-genutils in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from traitlets>=4.2->IPython>=2.1->ipython-memory-usage) (0.2.0)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from pexpect>4.3; sys_platform != \"win32\"->IPython>=2.1->ipython-memory-usage) (0.6.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/jkanclerz/.venv/lib/python3.8/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->IPython>=2.1->ipython-memory-usage) (0.1.9)\n",
+      "Building wheels for collected packages: ipython-memory-usage, memory-profiler, psutil\n",
+      "  Building wheel for ipython-memory-usage (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for ipython-memory-usage: filename=ipython_memory_usage-1.2-py3-none-any.whl size=8397 sha256=2c69b5564bad4373a58b538dce5e73fe6b39fb7ce04575071e6f60d9bf9815ca\n",
+      "  Stored in directory: /Users/jkanclerz/Library/Caches/pip/wheels/e5/22/b2/56157fbddf21ddeb2c0f13852a794d616051a100fc6896c874\n",
+      "  Building wheel for memory-profiler (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for memory-profiler: filename=memory_profiler-0.57.0-py3-none-any.whl size=28993 sha256=e88959264c82f7a6aa85ed07b2c7f5978c80ec86785b1fd238ec0734cbe83026\n",
+      "  Stored in directory: /Users/jkanclerz/Library/Caches/pip/wheels/24/2a/aa/41c20a5e40e527e894031ae00a70366c1aa884b89f6326a9d6\n",
+      "  Building wheel for psutil (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for psutil: filename=psutil-5.7.2-cp38-cp38-macosx_10_15_x86_64.whl size=234201 sha256=b277907f2a31b999dcc728028104638cda87b3e20c68c20bda5e4b3f0092e16d\n",
+      "  Stored in directory: /Users/jkanclerz/Library/Caches/pip/wheels/91/cf/b0/0c9998060b55ca80ea7a50a8639c3bdc6ba886eeff014bc9ac\n",
+      "Successfully built ipython-memory-usage memory-profiler psutil\n",
       "Installing collected packages: psutil, memory-profiler, ipython-memory-usage\n",
-      "  Running setup.py install for psutil ... \u001b[?25ldone\n",
-      "\u001b[?25h  Running setup.py install for memory-profiler ... \u001b[?25ldone\n",
-      "\u001b[?25h  Running setup.py install for ipython-memory-usage ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed ipython-memory-usage-1.2 memory-profiler-0.55.0 psutil-5.6.5\n",
-      "\u001b[33mYou are using pip version 19.0.3, however version 19.3.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Successfully installed ipython-memory-usage-1.2 memory-profiler-0.57.0 psutil-5.7.2\n",
+      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.3 is available.\n",
+      "You should consider upgrading via the '/Users/jkanclerz/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -168,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
