--- a/01--edi/07--xml-html.ipynb
+++ b/01--edi/07--xml-html.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,20 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lxml\n",
-      "  Using cached https://files.pythonhosted.org/packages/39/2b/0a66d5436f237aff76b91e68b4d8c041d145ad0a2cdeefe2c42f76ba2857/lxml-4.5.0.tar.gz\n",
-      "Installing collected packages: lxml\n",
-      "    Running setup.py install for lxml ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed lxml-4.5.0\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: lxml in /Users/jkanclerz/.platformio/penv/lib/python3.8/site-packages (4.5.2)\r\n"
      ]
     }
    ],
@@ -183,29 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FeatureNotFound",
-     "evalue": "Couldn't find a tree builder with the features you requested: lxml. Do you need to install a parser library?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFeatureNotFound\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-9c24afe69eef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_xml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lxml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/workspace/.venv/lib/python3.7/site-packages/bs4/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, element_classes, **kwargs)\u001b[0m\n\u001b[1;32m    226\u001b[0m                     \u001b[0;34m\"Couldn't find a tree builder with the features you \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    227\u001b[0m                     \u001b[0;34m\"requested: %s. Do you need to install a parser library?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 228\u001b[0;31m                     % \",\".join(features))\n\u001b[0m\u001b[1;32m    229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m         \u001b[0;31m# At this point either we have a TreeBuilder instance in\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFeatureNotFound\u001b[0m: Couldn't find a tree builder with the features you requested: lxml. Do you need to install a parser library?"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "loaded = bs(sample_xml, 'lxml')"
+    "loaded = bs(sample_xml, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,19 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Wykop(count=288, title='Rolnicy powracają do starej metody zwalczania szkodników przez sadzenie kwiatów', description='...zamiast używania chemikaliów. Użycie pestycydów okazuje się mieć negatywny wpływ na środowisko. Wielu rolników powraca więc obecnie do starożytnych, przyjaznych dla środowiska metod', tags=['#rolnictwo', '#ekologia', '#srodowisko', '#natura', '#zdrowie', '#polska']),\n",
-       " Wykop(count=240, title='Specjalny szpital w Wuhan już na ukończeniu! Mają rozmach...', description='Video z dzisiaj. Najbardziej aktualne jakie udało mi się znaleźć. Mimo że jest to tymczasowa budowla to tempo prac i skala projektu naprawdę robią wrażenie. Przewidywane otwarcie placówki 3.02.2020.', tags=['#swiat', '#ciekawostki', '#chiny', '#koronawirus', '#budownictwo', '#wuhan']),\n",
-       " Wykop(count=934, title='Kushner: Palestyńczycy nie potrafili nic zrobić ze swoją żałosną egzystencją', description='Tak przedstawiciel \"rasy panów\" i autor planu kolejnego rozbioru Palestyny ubliża ofiarom zbrodni Izraela.', tags=['#swiat', '#4konserwy', '#izrael', '#zydzi', '#palestyna']),\n",
-       " Wykop(count=851, title='Galeria Krosno', description='Biżuteria to znakomity pomysł na prezent Walentynki tuż, tuż Witek już wybrał‼ Teraz kolej na Ciebie‼  Świat Upominków Silver Art zaprasza‼', tags=['#polska', '#panwitek', '#zakupy', '#galeriakrosno', '#krosno', '#humorobrazkowy'])]"
+       "[Wykop(count=325, title='Trwa spontaniczny protest branży fitness w Warszawie.', description='\"100 tysięcy miejsc pracy jest na szali\"', tags=['#polska', '#ekonomia', '#silownia', '#mikrokoksy', '#koronawirus']),\n",
+       " Wykop(count=112, title='Braun zdjęty z wizji w „Forum” TVP Info. Promował książę o fałszywości pandemii', description='Grzegorz Braun kilkanaście minut po starcie programu „Forum” w TVP Info zakończył w nim udział. Prowadzący Adrian Klarenbach bezskutecznie prosił go, żeby nie eksponował do kamery okładki książki „Fałszywa pandemia”, bo to lokowanie produktu niedozwolone w programie publicystycznym.', tags=['#polityka', '#polska', '#wydarzenia', '#koronawirus', '#tvpis', '#tvpiscodzienny']),\n",
+       " Wykop(count=1952, title='KOLEJNY REKORD! 9622 nowych przypadków koronawirusa, 84 zgonów', description='Ministerstwo Zdrowia w sobotnim komunikacie poinformowało o 9622 nowych i potwierdzonych przypadkach koronawirusa. To niestety kolejny rekordowy wynik zakażeń w Polsce. Zmarło również 84 osób', tags=['#koronawirus', '#polska', '#krakow', '#covid19', '#wirus', '#bekazpisu']),\n",
+       " Wykop(count=599, title='Toksyczna książka \"Falszywa Pandemia\"', description='Uwaga, książka \"Falszywa Pandemia\" jest pełna głupot i  manipulacji. Książkę wydał Braun, a polecana jest miedzy innymi przez Radio Maryja', tags=['#nauka', '#koronawirus', '#ksiazki', '#bekazkatoli', '#medycyna', '#ciekawostki'])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,32 +314,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'#swiat': 1,\n",
-       " '#technologia': 2,\n",
-       " '#facebook': 1,\n",
-       " '#wojnaidei': 1,\n",
-       " '#wojnainformacyjna': 1,\n",
-       " '#kultura': 1,\n",
-       " '#polska': 3,\n",
-       " '#drony': 1,\n",
-       " '#dron': 1,\n",
-       " '#heheszki': 1,\n",
-       " '#gdansk': 1,\n",
-       " '#trojmiasto': 1,\n",
-       " '#kradziez': 1,\n",
-       " '#policja': 2,\n",
-       " '#poznan': 1,\n",
-       " '#moto': 1,\n",
-       " '#drogowka': 1}"
+       "{'#polska': 3,\n",
+       " '#ekonomia': 1,\n",
+       " '#silownia': 1,\n",
+       " '#mikrokoksy': 1,\n",
+       " '#koronawirus': 4,\n",
+       " '#polityka': 1,\n",
+       " '#wydarzenia': 1,\n",
+       " '#tvpis': 1,\n",
+       " '#tvpiscodzienny': 1,\n",
+       " '#krakow': 1,\n",
+       " '#covid19': 1,\n",
+       " '#wirus': 1,\n",
+       " '#bekazpisu': 1,\n",
+       " '#nauka': 1,\n",
+       " '#ksiazki': 1,\n",
+       " '#bekazkatoli': 1,\n",
+       " '#medycyna': 1,\n",
+       " '#ciekawostki': 1}"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,32 +351,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#polska', 3),\n",
-       " ('#policja', 2),\n",
-       " ('#technologia', 2),\n",
-       " ('#drogowka', 1),\n",
-       " ('#moto', 1),\n",
-       " ('#poznan', 1),\n",
-       " ('#kradziez', 1),\n",
-       " ('#trojmiasto', 1),\n",
-       " ('#gdansk', 1),\n",
-       " ('#heheszki', 1),\n",
-       " ('#dron', 1),\n",
-       " ('#drony', 1),\n",
-       " ('#kultura', 1),\n",
-       " ('#wojnainformacyjna', 1),\n",
-       " ('#wojnaidei', 1),\n",
-       " ('#facebook', 1),\n",
-       " ('#swiat', 1)]"
+       "[('#koronawirus', 4),\n",
+       " ('#polska', 3),\n",
+       " ('#ciekawostki', 1),\n",
+       " ('#medycyna', 1),\n",
+       " ('#bekazkatoli', 1),\n",
+       " ('#ksiazki', 1),\n",
+       " ('#nauka', 1),\n",
+       " ('#bekazpisu', 1),\n",
+       " ('#wirus', 1),\n",
+       " ('#covid19', 1),\n",
+       " ('#krakow', 1),\n",
+       " ('#tvpiscodzienny', 1),\n",
+       " ('#tvpis', 1),\n",
+       " ('#wydarzenia', 1),\n",
+       " ('#polityka', 1),\n",
+       " ('#mikrokoksy', 1),\n",
+       " ('#silownia', 1),\n",
+       " ('#ekonomia', 1)]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,32 +389,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#polska', 3),\n",
-       " ('#technologia', 2),\n",
-       " ('#policja', 2),\n",
-       " ('#swiat', 1),\n",
-       " ('#facebook', 1),\n",
-       " ('#wojnaidei', 1),\n",
-       " ('#wojnainformacyjna', 1),\n",
-       " ('#kultura', 1),\n",
-       " ('#drony', 1),\n",
-       " ('#dron', 1),\n",
-       " ('#heheszki', 1),\n",
-       " ('#gdansk', 1),\n",
-       " ('#trojmiasto', 1),\n",
-       " ('#kradziez', 1),\n",
-       " ('#poznan', 1),\n",
-       " ('#moto', 1),\n",
-       " ('#drogowka', 1)]"
+       "[('#koronawirus', 4),\n",
+       " ('#polska', 3),\n",
+       " ('#ekonomia', 1),\n",
+       " ('#silownia', 1),\n",
+       " ('#mikrokoksy', 1),\n",
+       " ('#polityka', 1),\n",
+       " ('#wydarzenia', 1),\n",
+       " ('#tvpis', 1),\n",
+       " ('#tvpiscodzienny', 1),\n",
+       " ('#krakow', 1),\n",
+       " ('#covid19', 1),\n",
+       " ('#wirus', 1),\n",
+       " ('#bekazpisu', 1),\n",
+       " ('#nauka', 1),\n",
+       " ('#ksiazki', 1),\n",
+       " ('#bekazkatoli', 1),\n",
+       " ('#medycyna', 1),\n",
+       " ('#ciekawostki', 1)]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
